<resources>
    <string name="app_name">TaskManager</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="due_date">Due Date</string>
    <string name="status">Is Task already Done?</string>
    <string name="icon">Icon</string>
    <string name="add_new_task">Add New Task</string>
    <string name="accept">Accept</string>

    <string name="feedbacktype1">ToDo</string>
    <string name="feedbacktype2">E-mail</string>
    <string name="feedbacktype3">Phone</string>
    <string name="feedbacktype4">Meeting</string>
</resources>
