<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:background="#EE535151">
    <LinearLayout
        android:background="#EE535151"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_task"
            android:textSize="10pt"></TextView>

        <EditText
            android:id="@+id/ItemTitle"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/ItemDescription"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/ItemDate"
            android:layout_height="wrap_content"
            android:hint="@string/due_date"
            android:inputType="datetime"
            android:layout_width="fill_parent">
        </EditText>

        <Spinner
            android:id="@+id/ItemType"
            android:layout_height="wrap_content"
            android:prompt="@string/feedbacktype3"
            android:layout_width="fill_parent"
            android:entries="@array/feedbacktypelist">
        </Spinner>


        <Button
            android:id="@+id/AcceptItem"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:layout_width="fill_parent">
        </Button>

    </LinearLayout>
</ScrollView>